no UI; add camera; add List; add about; add connection

--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,11 @@ allprojects {
     repositories {
         google()
         jcenter()
+        flatDir {
+            dirs 'libs'
+        }
+
+        maven { url 'https://jitpack.io' }
     }
 }
 
