--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -10,6 +10,7 @@ android {
         applicationId "com.gneo.fgurbanov.junctionhealth"
         minSdkVersion 21
         targetSdkVersion 28
+        multiDexEnabled true
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -26,27 +27,35 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-
+    splits {
+        abi {
+            enable true
+            reset()
+            include 'x86', 'x86_64', 'armeabi', 'armeabi-v7a', 'mips', 'mips64', 'arm64-v8a'
+            universalApk false
+        }
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.10"
 //    implementation 'androidx.core:core-ktx:1ю'
+    implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:support-fragment:28.0.0'
-    implementation 'com.android.support:multidex:1.0.3'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
 
     implementation "android.arch.lifecycle:extensions:1.1.1"
 
-    implementation 'io.reactivex.rxjava2:rxkotlin:2.3.0'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+//    implementation 'io.reactivex.rxjava2:rxkotlin:2.3.0'
+//    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
 
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
-    implementation "com.squareup.retrofit2:adapter-rxjava2:2.4.0"
 
     implementation 'com.google.code.gson:gson:2.8.5'
 
@@ -58,7 +67,17 @@ dependencies {
 
     implementation 'com.jakewharton.timber:timber:4.7.0'
 
-    implementation "com.polidea.rxandroidble2:rxandroidble:1.7.1"
+//    implementation "com.polidea.rxandroidble2:rxandroidble:1.7.1"
 
+    implementation 'com.squareup.retrofit2:adapter-rxjava:2.4.0'
     implementation 'com.ncapdevi:frag-nav:3.0.0'
+
+    implementation 'com.otaliastudios:cameraview:1.6.0'
+    implementation 'net.alexandroid.utils:exoplayerhelper:2.18'
+    implementation 'io.reactivex:rxandroid:1.2.1'
+    // Movesense .aar lib
+    implementation 'com.polidea.rxandroidble:rxandroidble:1.5.0'
+    implementation(name: 'mdslib', version: '1.28.1(1)-release', ext: 'aar')
+
+    implementation "com.github.ihsanbal:LoggingInterceptor:3.0.0"
 }
